--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "mysql2": "^3.1.2",
     "uuid": "^9.0.0"
   }
 }
